# hydra

./: .env.example  .gitignore  AUDIT_2026-05-19.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  docker-compose.yml  hydra_agent.py  hydra_backtest.py  hydra_backtest_metrics.py  hydra_backtest_server.py  hydra_backtest_tool.py  hydra_brain.py  hydra_derivatives_stream.py  hydra_engine.py  hydra_experiments.py  hydra_flywheel.py  hydra_heartbeat_surface.py  hydra_history_store.py  hydra_kraken_cli.py  hydra_meme_agent.py  hydra_pair_registry.py  hydra_quant_rules.py  hydra_rm_features.py  hydra_s3.py  hydra_state_migrator.py  hydra_streams.py  hydra_tape_capture.py  hydra_tuner.py  hydra_walk_forward.py  hydra_ws_server.py  requirements.txt  start_all.bat  start_hydra.bat  start_meme.bat
heartbeat/: AGENT.md  HONEST_FINDINGS.md  README.md  pyproject.toml
heartbeat/config/: default.yaml
heartbeat/evidence/: ABI_FUNNEL_2026-07-18.md  ABI_FUNNEL_2026-07-19.md  ABI_FUNNEL_ROUND3_2026-07-18.md  ABI_FUNNEL_STOPS_2026-07-18.md  bounce_geometry_1d.json  bounce_geometry_4h.json  bounce_geometry_study.json  gate1_synth.txt  gate2_replay_determinism.txt  gate3_eval_BTC.txt  gate3_eval_ETH.txt  gate3_eval_ZEC.txt  gate3_event_traces.txt  gate4_walkforward.txt  hydra_bakeoff.json  hydra_bakeoff_overlay_off.json  paper_bounce_sim.json  paper_bounce_sim_ZEC.json  paper_bounce_sim_maker16.json  tape_verify_BTC_USD.json  tape_verify_SOL_USD.json  tape_verify_ZEC_USD.json
heartbeat/evidence/abi/: s3_trail_funnel_2026-07-19.md
heartbeat/evidence/bakeoffs/: cascade_week_heartbeat.json  cascade_week_heartbeat_REGISTRATION.md  engine_buy_cooccurrence.json  engine_buy_cooccurrence_REGISTRATION.md  freshness_gate.json  s3_daily_classifier.json  s3_exit_policy.json  s3_exit_policy_REGISTRATION.md  (+4 more)
heartbeat/tests/: conftest.py  helpers.py  test_agent_tools.py  test_api.py  test_calibrate.py  test_candle.py  test_cli.py  test_config_package.py  test_dataset.py  test_default_yaml_sync.py  test_determinism.py  test_e2e_synth.py  test_errors.py  test_features_tier0.py  test_features_tier1.py  test_indicator_api.py  test_labeler.py  test_metrics.py  test_no_lookahead.py  test_posterior.py  test_rest.py  test_store.py  test_tape.py  test_weights_io.py
heartbeat/tools/: abi_s3_watermarks.py  avalanche_burst_study.py  bakeoff_close_confirm.py  bakeoff_envelope_1h.py  bakeoff_freshness_gate.py  bakeoff_s3_daily_classifier.py  bakeoff_s3_exit_policy.py  bakeoff_s3_heartbeat_confirmer.py  bakeoff_s3_trail_exit.py  bounce_geometry_study.py  cascade_week_heartbeat_auc.py  engine_buy_cooccurrence.py  exit_layer_lab.py  export_s3_model.py  heal_ohlc_from_trades.py  hydra_bakeoff.py  import_kraken_csv.py  overlay_vs_bh_study.py  paper_bounce_sim.py  s3_hold_horizon_study.py  stophunt_control_study.py  sync_trades_to_sqlite.py  verify_tape_vs_sqlite.py
s3bounce/: README.md  pyproject.toml
s3bounce/s3bounce/: __init__.py  candles.py  exits.py  features.py  model.py  model_artifact.json  setups.py  shadow.py  strategy.py
s3bounce/tests/: test_candles.py  test_exits.py  test_features.py  test_model.py  test_parity.py  test_setups.py  test_shadow.py  test_strategy.py
(+168 files in other folders)
