[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heartbeat"
version = "0.1.0"
description = "Recursive Bayesian order-flow posterior P(up)/P(down) from live Kraken tape — a confirmation classifier for bounce fake-vs-reversal discrimination."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "websockets>=12",
    "pyarrow>=14",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
heartbeat = "heartbeat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
